--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,119 @@
+@import url('https://fonts.googleapis.com/css?family=Nunito&display=swap');
+
+body {
+  min-width: 320px;
+  background-color: rgb(255, 234, 216);
+  color: #000000;
+  margin: 0px;
+  font-size: 16px;
+  font-family: Nunito;
+  box-sizing: border-box;
+  height: 100%;
+}
+
 #root {
+  width: 80%;
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  display: flex;
+  flex-direction: column;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+h1 {
+  font-size: 3.2em;
+  line-height: 1.1;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+form {
+  display: flex;
+  flex-wrap: nowrap;
+  margin: auto;
+  width: 95%;
+  justify-content: center;
+}
+
+input {
+  max-width: 600px;
+  width: 60%
+}
+
+label {
+  align-content: center;
+  margin: 10px
+}
+
+ul {
+  width: 70%;
+  list-style-type: square;
+  list-style-position: inside;
+  margin: auto
+}
+
+li {
+  display: flex;
+  justify-content: space-between;
+  text-align: left;
+  margin: 10px 0px;
+}
+
+button {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #f9f9f9;
+  cursor: pointer;
+  transition: border-color 0.25s;
+  margin: 0px 5px;
+}
+
+button:hover {
+  border-color: #646cff;
+}
+
+button:focus,
+button:focus-visible {
+  outline: 4px auto -webkit-focus-ring-color;
+}
+
+
+@media all and (max-width: 400px) {
+  #root {
+    width: 100%;
+    padding: 0;
   }
-  to {
-    transform: rotate(360deg);
+
+  h1 {
+    margin: 10px;
+  }
+
+  input {
+    border-bottom: 1px solid #171212;
+    width: 100%;
   }
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+@media all and (max-width: 900px) {
+  #root {
+    justify-content: center;
+    width: 100%;
+    padding: 0;
   }
-}
 
-.card {
-  padding: 2em;
-}
+  form {
+    display: flex;
+    flex-wrap: nowrap;
+    margin: auto;
+    width: 95%;
+  }
 
-.read-the-docs {
-  color: #888;
+  ul {
+    margin: 10px auto;
+    width: 90%;
+    padding: 0;
+  }
 }
